# work-calendar-helper

./: .git-blame-ignore-revs  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: main-ci.yml
requirements/: base.txt
src/work_cal/: base.py  cli.py  config.py  event.py  models.py
src/work_cal/calendar/: shift_parsing.py
src/work_cal/tui/: day_editor.py  day_list.py  errors.py  shift_planner.py  state.py
src/work_cal/tui/themes/: __init__.py  ayu_dark.py
